<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="50dp">

    <EditText
        android:id="@+id/nombre"
        android:layout_width="match_parent"
        android:layout_height="50dp"
       android:textAlignment="center"
        android:text="@string/app_name"
        android:textSize="20dp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/visor"
        android:layout_width="match_parent"
        android:layout_height="100dp"

        android:textSize="70dp"
        android:textAlignment="viewEnd"
        android:text="@string/resultado"/>


    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">


        <Button
            android:id="@+id/numero1"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="10dp"
            android:text="@string/num1" />

        <Button
            android:id="@+id/numero2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="10dp"
            android:text="@string/num2" />

        <Button
            android:id="@+id/numero3"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="10dp"
            android:text="@string/num3" />

        <Button
            android:id="@+id/sumar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="10dp"
            android:text="@string/suma" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">


        <Button
            android:id="@+id/numero4"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="10dp"
            android:text="@string/num4" />

        <Button
            android:id="@+id/numero5"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="10dp"
            android:text="@string/num5" />

        <Button
            android:id="@+id/numero6"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="10dp"
            android:text="@string/num6" />

        <Button
            android:id="@+id/resta"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="10dp"
            android:text="@string/resta" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">


        <Button
            android:id="@+id/numero7"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="10dp"
            android:text="@string/num7" />

        <Button
            android:id="@+id/numero8"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="10dp"
            android:text="@string/num8" />

        <Button
            android:id="@+id/numero9"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="10dp"
            android:text="@string/num9" />

        <Button
            android:id="@+id/multiplica"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="10dp"
            android:text="@string/multiplicar" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">


        <Button
            android:id="@+id/numero0"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="10dp"
            android:text="@string/num0" />

        <Button
            android:id="@+id/borrar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="10dp"
            android:text="@string/borrar" />

        <Button
            android:id="@+id/resultado"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="10dp"
            android:text="@string/igual" />

        <Button
            android:id="@+id/divide"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="10dp"
            android:text="@string/dividir" />

    </TableRow>

</LinearLayout>
